--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^19.2.3",
     "@google/genai": "^1.34.0",
     "recharts": "^3.6.0",
-    "@supabase/supabase-js": "^2.48.1"
+    "@supabase/supabase-js": "^2.48.1",
+    "vite": "^7.3.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
