--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "@google/genai": "^1.34.0",
-    "recharts": "^3.6.0",
+    "recharts": "2.12.7",
     "@supabase/supabase-js": "^2.48.1",
     "vite": "^7.3.1"
   },
